Set language in pipeline

--- a/pipeline/tasks/model.ipynb
+++ b/pipeline/tasks/model.ipynb
@@ -1487,6 +1487,7 @@
     "print(\"Guardando modelo... \")\n",
     "joblib.dump(grid, f'models/modelo_{datetime.datetime.now().timestamp()}.pkl')\n",
     "joblib.dump(grid, 'models/modelo_latest.pkl')\n",
+    "joblib.dump(grid, '../model/model.pkl')\n",
     "print(\"Modelo guardado!\")"
    ]
   }
