Remove locale dependency

--- a/pipeline/tasks/data_wrangling.ipynb
+++ b/pipeline/tasks/data_wrangling.ipynb
@@ -11,9 +11,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "import locale\n",
-    "locale.setlocale(locale.LC_ALL, 'es_ES.UTF-8')\n",
-    "\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "plt.style.use('seaborn-notebook')"
    ]
@@ -2393,10 +2390,12 @@
     }
    ],
    "source": [
+    "mes_dic = {'Ene': 1, 'Feb': 2, 'Mar': 3, 'Abr': 4, 'May': 5, 'Jun': 6, 'Jul': 7, 'Ago': 8, 'Sep': 9, 'Oct': 10, 'Nov': 11, 'Dic': 12}\n",
+    "\n",
     "precio_leche.rename(columns = {'Anio': 'ano', 'Mes': 'mes_pal'}, inplace = True) # precio = nominal, sin iva en clp/litro\n",
-    "precio_leche['mes_pal'] = precio_leche['mes_pal'] + '.' ## Workaround\n",
-    "precio_leche['mes'] = pd.to_datetime(precio_leche['mes_pal'], format = '%b')\n",
-    "precio_leche['mes'] = precio_leche['mes'].apply(lambda x: x.month)\n",
+    "# precio_leche['mes_pal'] = precio_leche['mes_pal'] + '.' ## Workaround\n",
+    "# precio_leche['mes'] = pd.to_datetime(precio_leche['mes_pal'], format = '%b')\n",
+    "precio_leche['mes'] = precio_leche['mes_pal'].apply(lambda x: mes_dic[x])\n",
     "precio_leche['mes-ano'] = precio_leche.apply(lambda x: f'{x.mes}-{x.ano}', axis = 1)\n",
     "precio_leche.head()"
    ]
