Update model directory

--- a/pipeline/tasks/data_wrangling.ipynb
+++ b/pipeline/tasks/data_wrangling.ipynb
@@ -3628,8 +3628,8 @@
    "outputs": [],
    "source": [
     "feature_data = feature_data.set_index(['ano', 'mes']).sort_index().reset_index()\n",
-    "feature_data.to_csv('../model/feature_data.csv', index=False)\n",
-    "feature_data.to_csv('saved/feature_data.csv', index=False)"
+    "feature_data.to_csv('saved/feature_data.csv', index=False)\n",
+    "feature_data.to_csv('/model/feature_data.csv', index=False)"
    ]
   },
   {
