Implement monitoring with weights and biases

--- a/pipeline/tasks/pre_processing.ipynb
+++ b/pipeline/tasks/pre_processing.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('saved/precio_leche_pp_pib.csv')"
+    "data = pd.read_csv('tmp/precio_leche_pp_pib.csv')"
    ]
   },
   {
@@ -78,7 +78,6 @@
    "source": [
     "# Para generar una division consistente\n",
     "np.random.seed(0)\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
@@ -88,10 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv('saved/X_train.csv', index=False)\n",
-    "y_train.to_csv('saved/y_train.csv', index=False)\n",
-    "X_test.to_csv('saved/X_test.csv', index=False)\n",
-    "y_test.to_csv('saved/y_test.csv', index=False)"
+    "X_train.to_csv('tmp/X_train.csv', index=False)\n",
+    "y_train.to_csv('tmp/y_train.csv', index=False)\n",
+    "X_test.to_csv('tmp/X_test.csv', index=False)\n",
+    "y_test.to_csv('tmp/y_test.csv', index=False)"
    ]
   }
  ],
